--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,21 @@
 [submodule "server/provision/cookbooks/apt"]
 	path = server/provision/cookbooks/apt
-	url = https://github.com/opscode-cookbooks/apt.git
+	url = git://github.com:opscode-cookbooks/apt.git
 [submodule "server/provision/cookbooks/vim"]
 	path = server/provision/cookbooks/vim
-	url = git@github.com:opscode-cookbooks/vim.git
+	url = git://github.com:opscode-cookbooks/vim.git
 [submodule "server/provision/cookbooks/build-essential"]
 	path = server/provision/cookbooks/build-essential
-	url = git@github.com:opscode-cookbooks/build-essential.git
+	url = git://github.com:opscode-cookbooks/build-essential.git
 [submodule "server/provision/cookbooks/tmux"]
 	path = server/provision/cookbooks/tmux
-	url = git@github.com:stevendanna/tmux.git
+	url = git://github.com:stevendanna/tmux.git
 [submodule "server/provision/cookbooks/heroku"]
 	path = server/provision/cookbooks/heroku
-	url = git@github.com:ichilton/chef_heroku.git
+	url = git://github.com:ichilton/chef_heroku.git
 [submodule "server/provision/cookbooks/editor"]
 	path = server/provision/cookbooks/editor
-	url = git@github.com:sethvargo-cookbooks/editor.git
+	url = git://github.com:sethvargo-cookbooks/editor.git
 [submodule "server/provision/cookbooks/magic_shell"]
 	path = server/provision/cookbooks/magic_shell
-	url = git@github.com:customink-webops/magic_shell.git
+	url = git://github.com:customink-webops/magic_shell.git
